campaigns/edit/: resolve contrast issues; refs #19676

--- a/goobi-viewer-core/src/main/resources/META-INF/resources/resources/css/less/admin/admin.less
+++ b/goobi-viewer-core/src/main/resources/META-INF/resources/resources/css/less/admin/admin.less
@@ -985,7 +985,7 @@
 		padding-left: 3rem;
 	}
 	.-deactivated {
-		opacity: 0.5;
+		opacity: .7;
 		a {
 			&:hover {
 				text-decoration: none !important;
